lib/tests/compile-fail/nonzero_default_fail.rs
#[allow(unused_imports)]
use enum_extra::NonZeroRepr;
use strum::EnumMetadata;

#[derive(NonZeroRepr, EnumMetadata)]
#[repr(u8)]
enum XYZZZ {
    A,
}


fn main() {
}
