lib/tests/compile-fail/nonzero_default_fail.stderr
error: proc-macro derive panicked
 --> tests/compile-fail/nonzero_default_fail.rs:7:10
  |
7 | #[derive(NonZeroRepr, EnumMetadata)]
  |          ^^^^^^^^^^^
  |
  = help: message: Enum element defaults to zero
